force-app/main/default/objects/Attendee__c/fields/Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Name__c</fullName>
    <description
  >The company or organization the attendee is affiliated with.</description>
    <inlineHelpText
  >Enter the attendee's company or organization.</inlineHelpText>
    <label>Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>