force-app/main/default/objects/Attendee__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The location associated with this attendee.</description>
    <inlineHelpText
  >Select the location associated with this attendee.</inlineHelpText>
    <label>Location</label>
    <referenceTo>Location__c</referenceTo>
    <relationshipLabel>Attendees</relationshipLabel>
    <relationshipName>Attendees</relationshipName>
    <type>Lookup</type>
</CustomField>