force-app/main/default/objects/Attendee__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>The attendee's contact phone number.</description>
    <inlineHelpText>Enter the attendee's phone number.</inlineHelpText>
    <label>Phone</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>